--- a/assets/style/contact.css
+++ b/assets/style/contact.css
@@ -19,8 +19,9 @@
 .contact-info h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
+    background-image: linear-gradient(45deg, #8e2de2, #4a00e0);
     background-clip: text;
-    color: transparent
+    color: transparent;
 }
 
 .contact-description {
