--- a/assets/style/projects.css
+++ b/assets/style/projects.css
@@ -46,7 +46,7 @@
 .project-info > p {
     font-size: 0.9rem;
     line-height: 1.5;
-    height: 4rem;
+    height: 8rem;
     overflow-y: scroll;
     -ms-overflow-style: none;  
     scrollbar-width: none; 
@@ -71,6 +71,7 @@
 #projects > h2, #contact > h2 {
     text-align: center;
     color: transparent;
+    background-image: linear-gradient(45deg, #8e2de2, #4a00e0);
     background-clip: text;
     font-size: 2rem;
     margin: 0.5rem;
